// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: ChannelMessage should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
      },
      false,
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#CBCED1",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="in-app-notification-Hey! How are you doing?"
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  />
</View>
`;

exports[`Story Snapshots: DirectMessage should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
      },
      false,
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#CBCED1",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="in-app-notification-Hey! How are you doing?"
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  />
</View>
`;

exports[`Story Snapshots: WithBlackTheme should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
      },
      false,
      {
        "backgroundColor": "#0d0d0d",
        "borderColor": "#1f2329",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="in-app-notification-Hey! How are you doing?"
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  />
</View>
`;

exports[`Story Snapshots: WithDarkTheme should match snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 4,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "paddingHorizontal": 14,
      },
      false,
      {
        "backgroundColor": "#262931",
        "borderColor": "#333842",
        "height": 75,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="in-app-notification-Hey! How are you doing?"
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 12,
        "left": 12,
        "right": 12,
        "top": 12,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  />
</View>
`;
